--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.6.0",
+    "lodash-move": "^1.1.1",
+    "lodash.clamp": "^4.0.3",
+    "lodash.shuffle": "^4.2.0",
+    "lorem-ipsum": "^2.0.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.1.2",
+    "react-use-gesture": "^9.1.3",
+    "react-use-measure": "^2.0.4",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
